CMAKE_MINIMUM_REQUIRED (VERSION 2.8)
PROJECT (asio_http)

OPTION (ASIO_HTTP_BUILD_EXAMPLES "Build asio_http examples" OFF)
OPTION (ASIO_HTTP_BUILD_TESTS "Build asio_http tests" OFF)

INCLUDE_DIRECTORIES (
	"${CMAKE_CURRENT_SOURCE_DIR}/include")

SET (asio_http_server_SOURCES
	src/http_parser.c)
ADD_LIBRARY (asio_http
	${asio_http_server_SOURCES})
INSTALL (DIRECTORY include/ DESTINATION include)
INSTALL (TARGETS asio_http
  RUNTIME DESTINATION bin
  LIBRARY DESTINATION lib
  ARCHIVE DESTINATION lib)

IF (ASIO_HTTP_BUILD_EXAMPLES)
	ADD_SUBDIRECTORY (examples)
ENDIF ()

IF (ASIO_HTTP_BUILD_TESTS)
	ENABLE_TESTING ()
	ADD_SUBDIRECTORY (tests)
ENDIF ()
